--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"
-      content="blow barber"
+      content="mapa solidario"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Blow barber DEMO</title>
+    <title>Mapa Solidario</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
